# croc-look

./: Cargo.toml  LICENSE  README.md
src/: cmd.rs  croc_tui.rs  locate.rs  main.rs  watch.rs
tests/: test.rs
