[package]
name = "croc-look"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
syn = { version = "1.0.99", features = ["full"] }
proc-macro2 = "1.0.43"
crossterm = "0.24.0"
loading = "0.3.0"
bat = "0.21.0"
notify = "4.0.17"
