[package]
name = "croc-look"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["expand", "macros", "procedural-macros"]
description = "a tool to expand macros and watch them in real time"
categories = ["command-line-utilities", "development-tools::procedural-macro-helpers"]
repository = "https://github.com/Daksh14/croc-look"

[dependencies]
# Terminal
clap = { version = "3.2.16", features = ["derive"] }
ctrlc = { version = "3.2.0", features = ["termination"] }
crossterm = "0.24.0"
loading = "0.3.0"
bat = "0.21.0"
tui = "0.18"

# Parsing
syn = { version = "1.0.99", features = ["full"] }
proc-macro2 = "1.0.43"

# Misc
hotwatch = "0.4.6"
crossbeam = { version = "0.8.2" }
crossbeam-channel = "0.4.0"
